# d2x-rs

./: .gitignore  Cargo.toml  README.md
.opencode/: AGENTS.md
crates/d2x-assets/: Cargo.toml
crates/d2x-assets/src/: common.rs  dhf.rs  error.rs  ham.rs  hog.rs  hog2.rs  level.rs  lib.rs  mission.rs  models.rs  palette.rs  pig.rs  pof.rs  sound.rs
crates/d2x-client/: Cargo.toml
crates/d2x-client/src/: main.rs  setup.rs  video.rs
crates/d2x-client/src/ui/: menu.rs  menu_item.rs  mod.rs
crates/d2x-engine/: Cargo.toml
crates/d2x-engine/examples/: midi_player.rs
crates/d2x-engine/src/: ai.rs  audio.rs  collision.rs  level.rs  lib.rs  objects.rs  physics.rs  rendering.rs  weapons.rs
crates/descent-core/: Cargo.toml
crates/descent-core/examples/: parse_hxm.rs
crates/descent-core/src/: ase.rs  dhf.rs  error.rs  fixed_point.rs  geometry.rs  ham.rs  hog2.rs  hxm.rs  iff.rs  io.rs  level.rs  lib.rs  mission.rs  models.rs  mve.rs  mvl.rs  ogf.rs  oof.rs  palette.rs  pcx.rs  pig.rs  player.rs  pof.rs  sound.rs  tga.rs  validation.rs  video.rs
crates/descent-core/src/converters/: archive.rs  audio.rs  level.rs  mod.rs  model.rs  texture.rs
crates/descent-core/tests/: feature_gates.rs
crates/tools/ase2glb/: Cargo.toml  README.md
crates/tools/ase2glb/src/: main.rs
crates/tools/dhfextract/: Cargo.toml
crates/tools/dhfextract/src/: main.rs
crates/tools/pcx2tga/: Cargo.toml
crates/tools/pcx2tga/src/: main.rs
crates/tools/pof2glb/: Cargo.toml  README.md
crates/tools/pof2glb/src/: main.rs
dle/: ARCHITECTURE.md  CMakeLists.txt
dle/docs/: UI_MIGRATION_PLAN.md
dle/resources/: resources.qrc
dle/src/: dhfextract.cpp  main.cpp
dle/src/core/: CMakeLists.txt
dle/src/core/io/: DhfArchive.cpp  DhfArchive.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  LevelReader.cpp  LevelReader.h
dle/src/core/mine/: Matcen.cpp  Matcen.h  Mine.cpp  Mine.h  Object.cpp  Object.h  Segment.cpp  Segment.h  Side.cpp  Side.h  Trigger.cpp  Trigger.h  Wall.cpp  Wall.h
dle/src/core/types/: Types.h
dle/src/plugins/imageformats/: CMakeLists.txt  IlbmHandler.cpp  IlbmHandler.h  IlbmPlugin.cpp  IlbmPlugin.h  PcxHandler.cpp  PcxHandler.h  PcxPlugin.cpp  PcxPlugin.h  ilbm.json  pcx.json
dle/src/render/: CMakeLists.txt  LevelViewport.cpp  LevelViewport.h  MineRenderer.cpp  MineRenderer.h  shaders.qrc
dle/src/render/shaders/: README.md  basic.frag  basic.vert
dle/src/ui/: CMakeLists.txt
dle/src/ui/mainwindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
dle/src/ui/properties/: PropertiesPanel.cpp  PropertiesPanel.h
dle/src/ui/segmentinfo/: SegmentInfoPanel.cpp  SegmentInfoPanel.h
dle/src/ui/texturebrowser/: TextureBrowser.cpp  TextureBrowser.h
dle/src/ui/toolpanel/: DiagnosticsTool.cpp  DiagnosticsTool.h  DiagnosticsTool.ui  EffectTool.cpp  EffectTool.h  EffectTool.ui  ObjectTool.cpp  ObjectTool.h  ObjectTool.ui  SegmentTool.cpp  SegmentTool.h  SegmentTool.ui  ToolPanel.cpp  ToolPanel.h  TriggerTool.cpp  TriggerTool.h  TriggerTool.ui  WallTool.cpp  WallTool.h  WallTool.ui
dle/test/test_ilbm_plugin/: CMakeLists.txt  test_ilbm_plugin.cpp
dle/test/test_pcx_plugin/: CMakeLists.txt  test_pcx_plugin.cpp
docs/: ARCHITECTURE.md  DESCENT3_FORMATS.md  DESCENT_FORMAT_STATUS.md  FEATURES.md  LEVEL_EDITOR_PLAN.md  PROJECT_SUMMARY.md  RDSS_ANALYSIS.md  RDSS_TODO.md  REFACTORING_PLAN.md
docs/formats/: D3_FORMATS.md  HAM_FORMAT.md  HOG_FORMAT.md  LEVEL_FORMAT.md  MISSION_FORMAT.md  MVE_FORMAT.md  OGF_FORMAT.md  PIG_FORMAT.md  PLAYER_FORMAT.md  POF_FORMAT.md  SOUND_FORMAT.md
docs/networking/: ARCHITECTURE.md
