[workspace]
members = [
    "crates/descent-core",
    "crates/d2x-engine",
    "crates/d2x-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["D2X-RS Contributors"]
license = "GPL-3.0"
repository = "https://github.com/yourusername/d2x-rs"

[workspace.dependencies]
# Bevy ecosystem
bevy = { version = "0.18", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Binary parsing
winnow = "0.7"

# Math
glam = { version = "0.28", features = ["serde"] }

# Utilities
once_cell = "1.19"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = "fat"
strip = true
