[package]
name = "descent-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data parsing and asset extraction for Descent 1, 2, and 3"

[dependencies]
# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Binary parsing
winnow = { workspace = true }

# Math
glam = { workspace = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

# Utilities
once_cell = { workspace = true }
bitflags = "2.6"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
# criterion = "0.5"

# [[bench]]
# name = "hog_parsing"
# harness = false

[features]
default = []

# Game versions
base-d1 = []
base-d2 = ["base-d1"]
base-d3 = []

# Extended limits (D2X-XL)
extended-limits = []

# High-res asset support
hires-assets = []
