[package]
name = "descent-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data parsing and asset extraction for Descent 1, 2, and 3"

[dependencies]
# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Binary parsing
byteorder = "1.5"

# Math
glam = { workspace = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["tga"] }

# 3D model formats
gltf-json = { version = "1.4", features = ["names"] }
serde_json = "1.0"

# Utilities
once_cell = { workspace = true }
bitflags = "2.6"

# Logging
tracing = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.15"
# criterion = "0.5"

# [[bench]]
# name = "hog_parsing"
# harness = false

[features]
default = []

# Game versions
base-d1 = []
base-d2 = ["base-d1"]
base-d3 = []

# Extended limits (D2X-XL)
extended-limits = []

# High-res asset support (D2X-XL ASE models and TGA textures)
hires-assets = []

# D2X-XL support (includes extended-limits and hires-assets)
d2x-xl = ["extended-limits", "hires-assets"]

# Video conversion (MVE to MP4)
video = ["dep:ffmpeg-next"]

[dependencies.ffmpeg-next]
version = "8.0"
optional = true
default-features = false
features = ["codec", "format"]  # Use system FFmpeg libraries
