[package]
name = "pof2glb"
version = "0.1.0"
edition = "2024"
authors = ["d2x-rs contributors"]
description = "CLI tool to convert Descent POF models to glTF/GLB format"
license = "MIT OR Apache-2.0"

[dependencies]
descent-core = { path = "../../descent-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
